# Lidar-Simulation

./: .gitignore  LiDAR-sim-copy.sdf  LiDAR-sim-with-noise.sdf  LiDAR-sim.sdf  notes.md  old-LiDAR-sim.sdf  script.sh  tmp.sdf  vscode-configutation-notes.md
From_Gazbeo_Repo/: LiDAR-sim-with-noise.sdf  notes.md
Non_Uniform_Lidar_plugin/: CMakeLists.txt  LiDAR-sim_copy.sdf  NonUniformPointCloudPlugin.cc  scrpit.sh
Non_Uniform_PointCloud_Plugin/: NonUniformPointCloudPlugin.cc
urdf_Model/: lidar-sim.urdf  wordl-sim.sdf
